--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,19 +20,24 @@ S3method(tune_args,model_spec)
 S3method(tune_args,recipe)
 S3method(tune_args,step)
 S3method(tune_args,workflow)
+export(grid_control)
 export(no_param)
 export(param_set)
 export(tunable)
 export(tune)
 export(tune_args)
+export(tune_grid)
 importFrom(dials,param_set)
 importFrom(dials,param_set_constr)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,one_of)
 importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
 importFrom(glue,glue)
 importFrom(purrr,iwalk)
 importFrom(purrr,map)
@@ -42,10 +47,20 @@ importFrom(purrr,map_lgl)
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
 importFrom(rlang,eval_tidy)
+importFrom(rlang,expr)
 importFrom(rlang,is_false)
 importFrom(rlang,is_quosure)
 importFrom(rlang,is_quosures)
 importFrom(rlang,ns_env)
 importFrom(rlang,quo_get_expr)
+importFrom(rlang,sym)
+importFrom(stats,predict)
+importFrom(stats,sd)
 importFrom(tibble,tibble)
+importFrom(tidyr,unnest)
 importFrom(utils,globalVariables)
+importFrom(workflows,outcome_names)
+importFrom(yardstick,accuracy)
+importFrom(yardstick,mn_log_loss)
+importFrom(yardstick,rmse)
+importFrom(yardstick,rsq)
