more multi_predict

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(tune_args,workflow)
 export(grid_control)
 export(no_param)
 export(param_set)
+export(summarizer)
 export(tunable)
 export(tune)
 export(tune_args)
