--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,30 +20,38 @@ S3method(tune_args,model_spec)
 S3method(tune_args,recipe)
 S3method(tune_args,step)
 S3method(tune_args,workflow)
+export(Bayes_control)
 export(grid_control)
 export(no_param)
 export(param_set)
 export(summarizer)
 export(tunable)
 export(tune)
+export(tune_Bayes)
 export(tune_args)
 export(tune_grid)
 importFrom(dials,param_set)
 importFrom(dials,param_set_constr)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,ungroup)
 importFrom(glue,glue)
+importFrom(kernlab,gausspr)
+importFrom(kernlab,predict)
 importFrom(purrr,iwalk)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
+importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
@@ -55,10 +63,10 @@ importFrom(rlang,is_quosures)
 importFrom(rlang,ns_env)
 importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
-importFrom(stats,predict)
 importFrom(stats,sd)
 importFrom(tibble,tibble)
 importFrom(tidyr,unnest)
+importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
 importFrom(workflows,outcome_names)
 importFrom(yardstick,accuracy)
