added an option for uncertainty sampling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
+importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,ungroup)
