--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     yardstick,
     rsample,
     tidyr,
-    kernlab
+    kernlab,
+    foreach
 Suggests: 
     parsnip (>= 0.0.3.9000),
     recipes (>= 0.1.6.9000),
