--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(dplyr,ungroup)
 importFrom(glue,glue)
 importFrom(kernlab,gausspr)
 importFrom(kernlab,predict)
+importFrom(parsnip,get_from_env)
 importFrom(purrr,iwalk)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
