namespace and global variable false positives

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,9 @@ Imports:
     rsample,
     tidyr,
     kernlab,
-    foreach
-Suggests: 
+    foreach,
     parsnip (>= 0.0.3.9000),
+Suggests: 
     recipes (>= 0.1.6.9000),
     testthat,
     knitr,
