added a few error traps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(tune)
 export(tune_Bayes)
 export(tune_args)
 export(tune_grid)
+importFrom(dials,is_unknown)
 importFrom(dials,param_set)
 importFrom(dials,param_set_constr)
 importFrom(dplyr,"%>%")
@@ -59,6 +60,7 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
+importFrom(rlang,env_get)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,expr)
 importFrom(rlang,is_false)
