namespace and global variable FP cleanup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(estimate)
 export(grid_control)
 export(no_param)
 export(param_set)
+export(plot_perf_vs_iter)
 export(tunable)
 export(tune)
 export(tune_Bayes)
@@ -48,6 +49,12 @@ importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,xlab)
 importFrom(glue,glue)
 importFrom(kernlab,gausspr)
 importFrom(kernlab,predict)
@@ -69,6 +76,7 @@ importFrom(rlang,is_quosures)
 importFrom(rlang,ns_env)
 importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
+importFrom(stats,qt)
 importFrom(stats,sd)
 importFrom(tibble,tibble)
 importFrom(tidyr,unnest)
