--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Description: The ability to tune models is important. tune contains functions an
     finding reasonable values of hyper-parameters in models, pre-processing
     methods, and post-processing steps. 
 License: GPL-2 
+Depends:
+    ggplot2
 Imports:
     dplyr (>= 0.8.3),
     rlang (>= 0.4.0),
