more fault tolerance when a model fails across all resamples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,xlab)
 importFrom(glue,glue)
+importFrom(glue,glue_collapse)
 importFrom(kernlab,gausspr)
 importFrom(kernlab,predict)
 importFrom(parsnip,get_from_env)
