--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,10 +36,12 @@ importFrom(dials,is_unknown)
 importFrom(dials,param_set)
 importFrom(dials,param_set_constr)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,anti_join)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,mutate)
