--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,4 +41,4 @@ Remotes:
     tidymodels/recipes@step-changes,
     tidymodels/dials@parameters-method,
     tidymodels/parsnip,
-    topepo/workflows   
+    topepo/workflows@updating-elements   
