--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(kernlab,predict)
 importFrom(parsnip,get_from_env)
 importFrom(purrr,iwalk)
 importFrom(purrr,map)
+importFrom(purrr,map2_dfc)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
