--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(merge,recipe)
 S3method(param_set,model_spec)
 S3method(param_set,recipe)
 S3method(param_set,workflow)
+S3method(predict,conf_bound)
+S3method(predict,exp_improve)
 S3method(tunable,model_spec)
 S3method(tunable,recipe)
 S3method(tunable,step)
@@ -22,21 +24,27 @@ S3method(tune_args,recipe)
 S3method(tune_args,step)
 S3method(tune_args,workflow)
 export(Bayes_control)
+export(conf_bound)
 export(estimate)
+export(exp_improve)
 export(grid_control)
 export(no_param)
 export(param_set)
 export(plot_perf_vs_iter)
+export(prob_improve)
 export(tunable)
 export(tune)
 export(tune_Bayes)
 export(tune_args)
 export(tune_grid)
+importFrom(GPfit,GP_fit)
+importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
 importFrom(dials,param_set)
 importFrom(dials,param_set_constr)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
@@ -59,8 +67,6 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,xlab)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
-importFrom(kernlab,gausspr)
-importFrom(kernlab,predict)
 importFrom(parsnip,get_from_env)
 importFrom(purrr,iwalk)
 importFrom(purrr,map)
@@ -75,11 +81,16 @@ importFrom(rlang,env_get)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,expr)
 importFrom(rlang,is_false)
+importFrom(rlang,is_function)
 importFrom(rlang,is_quosure)
 importFrom(rlang,is_quosures)
 importFrom(rlang,ns_env)
 importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
+importFrom(stats,dnorm)
+importFrom(stats,pnorm)
+importFrom(stats,predict)
+importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,sd)
 importFrom(tibble,tibble)
