better , but much slower, method of fitting the GP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ importFrom(rlang,ns_env)
 importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
 importFrom(stats,dnorm)
+importFrom(stats,model.matrix)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
