--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(param_set,recipe)
 S3method(param_set,workflow)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
+S3method(predict,prob_improve)
+S3method(print,prob_improve)
 S3method(tunable,model_spec)
 S3method(tunable,recipe)
 S3method(tunable,step)
