changes for R CMD check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,9 @@ Suggests:
     recipes (>= 0.1.6.9000),
     testthat,
     knitr,
-    covr
+    covr,
+    kernlab,
+    glmnet
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
