--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,6 @@ importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
 importFrom(workflows,outcome_names)
 importFrom(yardstick,accuracy)
-importFrom(yardstick,mn_log_loss)
+importFrom(yardstick,kap)
 importFrom(yardstick,rmse)
 importFrom(yardstick,rsq)
