--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,13 @@
 S3method(estimate,grid_results)
 S3method(merge,model_spec)
 S3method(merge,recipe)
+S3method(min_grid,boost_tree)
+S3method(min_grid,linear_reg)
+S3method(min_grid,logistic_reg)
+S3method(min_grid,mars)
+S3method(min_grid,model_spec)
+S3method(min_grid,multinom_reg)
+S3method(min_grid,nearest_neighbor)
 S3method(param_set,model_spec)
 S3method(param_set,recipe)
 S3method(param_set,workflow)
@@ -30,6 +37,13 @@ export(conf_bound)
 export(estimate)
 export(exp_improve)
 export(grid_control)
+export(min_grid)
+export(min_grid.boost_tree)
+export(min_grid.linear_reg)
+export(min_grid.logistic_reg)
+export(min_grid.mars)
+export(min_grid.multinom_reg)
+export(min_grid.nearest_neighbor)
 export(no_param)
 export(param_set)
 export(plot_perf_vs_iter)
@@ -57,6 +71,7 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
