harmonized min_grid helpers and added more test cases closes #3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,one_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
@@ -92,6 +93,7 @@ importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(rlang,":=")
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
 importFrom(rlang,env_get)
@@ -111,6 +113,7 @@ importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,sd)
+importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,unnest)
 importFrom(utils,capture.output)
