--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.3.1
-pkgdown: 1.3.0
-pkgdown_sha: ~
+pkgdown: 1.3.0.9100
+pkgdown_sha: 71070c3aa5cbff0bffd5bdc599f0fffbd5065142
 articles:
   acquisition_functions: acquisition_functions.html
   Classification: articles/Classification.html
