--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(Bayes_control)
 export(conf_bound)
 export(estimate)
 export(exp_improve)
+export(expo_decay)
 export(grid_control)
 export(min_grid)
 export(min_grid.boost_tree)
