--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,8 @@ importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(recipes,all_outcomes)
+importFrom(recipes,all_predictors)
 importFrom(rlang,":=")
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
