--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
@@ -119,6 +120,7 @@ importFrom(stats,qt)
 importFrom(stats,sd)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
+importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
