changed class "grid_results" to "tune_results"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,7 @@ export(no_param)
 export(param_set)
 export(plot_perf_vs_iter)
 export(prob_improve)
-export(summarise.grid_results)
+export(summarise.tune_results)
 export(summarize)
 export(tunable)
 export(tune)
