--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(parsnip,get_from_env)
