--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(Bayes_control)
 export(conf_bound)
 export(exp_improve)
 export(expo_decay)
+export(get_predictions)
 export(grid_control)
 export(min_grid)
 export(min_grid.boost_tree)
@@ -112,6 +113,7 @@ importFrom(rlang,is_quosures)
 importFrom(rlang,ns_env)
 importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
+importFrom(rlang,syms)
 importFrom(stats,dnorm)
 importFrom(stats,model.matrix)
 importFrom(stats,pnorm)
