--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
+importFrom(utils,packageVersion)
 importFrom(workflows,outcome_names)
 importFrom(yardstick,accuracy)
 importFrom(yardstick,kap)
