(mostly) commong logging api based on devel cli

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,10 @@ export(tune_Bayes)
 export(tune_args)
 export(tune_grid)
 importFrom(GPfit,GP_fit)
+importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_danger)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_warning)
 importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
 importFrom(dials,param_set)
