added some things to the namespace file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(GPfit,GP_fit)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
 importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
@@ -125,6 +126,7 @@ importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,nest)
