prototype S3 methods for tune_grid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,10 @@ S3method(tune_args,model_spec)
 S3method(tune_args,recipe)
 S3method(tune_args,step)
 S3method(tune_args,workflow)
+S3method(tune_grid,default)
+S3method(tune_grid,formula)
+S3method(tune_grid,recipe)
+S3method(tune_grid,workflow)
 export(Bayes_control)
 export(conf_bound)
 export(exp_improve)
@@ -113,6 +117,7 @@ importFrom(rlang,eval_tidy)
 importFrom(rlang,expr)
 importFrom(rlang,is_false)
 importFrom(rlang,is_function)
+importFrom(rlang,is_missing)
 importFrom(rlang,is_quosure)
 importFrom(rlang,is_quosures)
 importFrom(rlang,ns_env)
