Made tune_Bayes S3 plus some documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,10 @@ S3method(tunable,step_tokenize)
 S3method(tunable,step_umap)
 S3method(tunable,step_woe)
 S3method(tunable,workflow)
+S3method(tune_Bayes,default)
+S3method(tune_Bayes,formula)
+S3method(tune_Bayes,recipe)
+S3method(tune_Bayes,workflow)
 S3method(tune_args,model_spec)
 S3method(tune_args,recipe)
 S3method(tune_args,step)
