get_predictions -> collect_predictions, also collect_metrics for #33

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,10 +40,11 @@ S3method(tune_grid,formula)
 S3method(tune_grid,recipe)
 S3method(tune_grid,workflow)
 export(Bayes_control)
+export(collect_metrics)
+export(collect_predictions)
 export(conf_bound)
 export(exp_improve)
 export(expo_decay)
-export(get_predictions)
 export(grid_control)
 export(min_grid)
 export(min_grid.boost_tree)
