--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,7 +130,9 @@ importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(stats,dnorm)
+importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,model.response)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
