--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Description: The ability to tune models is important. tune contains functions an
 License: GPL-2 
 Depends:
     ggplot2,
-    R (>= 2.10)
+    R (>= 2.10),
+    recipes (>= 0.1.6.9000)
 Imports:
     dplyr (>= 0.8.3),
     rlang (>= 0.4.0),
@@ -28,8 +29,7 @@ Imports:
     tidyr,
     GPfit,
     foreach,
-    parsnip (>= 0.0.3.9000),
-    recipes (>= 0.1.6.9000)
+    parsnip (>= 0.0.3.9000)
 Suggests: 
     testthat,
     knitr,
