experted summarise to avoid warnings in MPI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(no_param)
 export(param_set)
 export(plot_perf_vs_iter)
 export(prob_improve)
+export(summarise)
 export(summarize)
 export(tunable)
 export(tune)
@@ -97,6 +98,7 @@ importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(foreach,foreach)
