--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ importFrom(dplyr,ungroup)
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_point)
