--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 Remotes:
     tidymodels/recipes,
-    tidymodels/dials,
+    tidymodels/dials@f42cb51,
     tidymodels/parsnip,
     topepo/workflows@updating-elements   
