--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,10 @@ S3method(min_grid,mars)
 S3method(min_grid,model_spec)
 S3method(min_grid,multinom_reg)
 S3method(min_grid,nearest_neighbor)
+S3method(outcome_names,formula)
+S3method(outcome_names,recipe)
+S3method(outcome_names,terms)
+S3method(outcome_names,workflow)
 S3method(param_set,model_spec)
 S3method(param_set,recipe)
 S3method(param_set,workflow)
@@ -19,6 +23,7 @@ S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
 S3method(print,prob_improve)
+S3method(print,workflow)
 S3method(summarise,tune_results)
 S3method(tunable,model_spec)
 S3method(tunable,recipe)
@@ -44,6 +49,9 @@ S3method(tune_grid,formula)
 S3method(tune_grid,recipe)
 S3method(tune_grid,workflow)
 export(Bayes_control)
+export(add_formula)
+export(add_model)
+export(add_recipe)
 export(collect_metrics)
 export(collect_predictions)
 export(conf_bound)
@@ -59,6 +67,7 @@ export(min_grid.mars)
 export(min_grid.multinom_reg)
 export(min_grid.nearest_neighbor)
 export(no_param)
+export(outcome_names)
 export(param_set)
 export(plot_perf_vs_iter)
 export(prob_improve)
@@ -69,6 +78,7 @@ export(tune)
 export(tune_Bayes)
 export(tune_args)
 export(tune_grid)
+export(workflow)
 importFrom(GPfit,GP_fit)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_danger)
@@ -155,7 +165,6 @@ importFrom(tidyr,unnest)
 importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
 importFrom(utils,packageVersion)
-importFrom(workflows,outcome_names)
 importFrom(yardstick,accuracy)
 importFrom(yardstick,kap)
 importFrom(yardstick,rmse)
