fixed some links

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 vignettes/extras/classification_cache
 inst/examples/finefoods.txt
 vignettes/extras/text_analysis_cache
+vignettes/extras/Classification_cache
