--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,7 +3,7 @@ pkgdown: 1.3.0.9100
 pkgdown_sha: 71070c3aa5cbff0bffd5bdc599f0fffbd5065142
 articles:
   acquisition_functions: acquisition_functions.html
-  classification: extras/classification.html
+  Classification: extras/Classification.html
   optimizations: extras/optimizations.html
   text_analysis: extras/text_analysis.html
   getting_started: getting_started.html
