updates from r-lib/r-azure-pipelines/azure-pipelines.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,8 @@
-variables:
+parameters:
   R_LIBS_USER: '$(Agent.BuildDirectory)/R/library'
   CRAN: 'https://cloud.r-project.org'
   coverage: true
-
-resources:
-  repositories:
-    - repository: r-azure-pipelines
-      type: github
-      name: r-lib/r-azure-pipelines
-      endpoint: tidymodels
+  env: {}
 
 jobs:
   - job: 'Linux'
@@ -22,16 +16,19 @@ jobs:
       vmImage: 'Ubuntu-16.04'
     strategy:
       matrix:
+        R-3.4:
+          containerImage: rstudio/r-base:3.4-xenial
         R-3.5:
           containerImage: rstudio/r-base:3.5-xenial
         R-3.6:
           containerImage: rstudio/r-base:3.6-xenial
     container: $[ variables['containerImage'] ]
     steps:
-      - template: templates/r-setup-linux.yml@r-azure-pipelines
-      - template: templates/pkg-workflow.yml@r-azure-pipelines
+      - template: templates/r-setup-linux.yml
+      - template: templates/pkg-workflow.yml
         parameters:
           coverage: false
+
 
   - job: 'macOS'
     variables:
@@ -42,10 +39,10 @@ jobs:
     pool:
       vmImage: 'macOS-10.13'
     steps:
-      - template: templates/r-setup-macOS.yml@r-azure-pipelines
-      - template: templates/pkg-workflow.yml@r-azure-pipelines
+      - template: templates/r-setup-macOS.yml
+      - template: templates/pkg-workflow.yml
         parameters:
-          coverage: true
+          coverage: ${{parameters.coverage}}
 
   - job: 'Windows'
     variables:
@@ -56,10 +53,9 @@ jobs:
     pool:
       vmImage: 'vs2017-win2016'
     steps:
-      - template: templates/r-setup-windows.yml@r-azure-pipelines
-      - template: templates/pkg-workflow.yml@r-azure-pipelines
+      - template: templates/r-setup-windows.yml
+      - template: templates/pkg-workflow.yml
         parameters:
           args: "c('--no-manual', '--no-multiarch')"
           coverage: false
           cache: false
-
