missed a few links and renamed to avoid case issues

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,7 +3,7 @@ pkgdown: 1.4.1.9000
 pkgdown_sha: d01672efa3baa80fd7ab238b7143080b0daf49a4
 articles:
   acquisition_functions: acquisition_functions.html
-  Classification: extras/Classification.html
+  Classification: extras/svm_classification.html
   optimizations: extras/optimizations.html
   text_analysis: extras/text_analysis.html
   getting_started: getting_started.html
