param_set -> parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,9 @@ S3method(outcome_names,formula)
 S3method(outcome_names,recipe)
 S3method(outcome_names,terms)
 S3method(outcome_names,workflow)
-S3method(param_set,model_spec)
-S3method(param_set,recipe)
-S3method(param_set,workflow)
+S3method(parameters,model_spec)
+S3method(parameters,recipe)
+S3method(parameters,workflow)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
@@ -69,7 +69,7 @@ export(min_grid.multinom_reg)
 export(min_grid.nearest_neighbor)
 export(no_param)
 export(outcome_names)
-export(param_set)
+export(parameters)
 export(plot_perf_vs_iter)
 export(prob_improve)
 export(tunable)
@@ -86,8 +86,8 @@ importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
 importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
-importFrom(dials,param_set)
-importFrom(dials,param_set_constr)
+importFrom(dials,parameters)
+importFrom(dials,parameters_constr)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
