re-export autoplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(Bayes_control)
 export(add_formula)
 export(add_model)
 export(add_recipe)
+export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
 export(conf_bound)
@@ -111,6 +112,7 @@ importFrom(dplyr,ungroup)
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,autoplot)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_errorbar)
