added select_best method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(outcome_names)
 export(parameters)
 export(plot_perf_vs_iter)
 export(prob_improve)
+export(select_best)
 export(tunable)
 export(tune)
 export(tune_Bayes)
