split select_best into select_best and show_best

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(outcome_names)
 export(parameters)
 export(prob_improve)
 export(select_best)
+export(show_best)
 export(tunable)
 export(tune)
 export(tune_Bayes)
