--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,7 +49,6 @@ S3method(tune_grid,default)
 S3method(tune_grid,formula)
 S3method(tune_grid,recipe)
 S3method(tune_grid,workflow)
-export(Bayes_control)
 export(add_formula)
 export(add_model)
 export(add_recipe)
@@ -57,10 +56,11 @@ export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
 export(conf_bound)
+export(ctrl_Bayes)
+export(ctrl_grid)
 export(estimate)
 export(exp_improve)
 export(expo_decay)
-export(grid_control)
 export(load_pkgs)
 export(min_grid)
 export(min_grid.boost_tree)
