tune_Bayes -> tune_bayes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,14 +37,14 @@ S3method(tunable,step_tokenize)
 S3method(tunable,step_umap)
 S3method(tunable,step_woe)
 S3method(tunable,workflow)
-S3method(tune_Bayes,default)
-S3method(tune_Bayes,formula)
-S3method(tune_Bayes,recipe)
-S3method(tune_Bayes,workflow)
 S3method(tune_args,model_spec)
 S3method(tune_args,recipe)
 S3method(tune_args,step)
 S3method(tune_args,workflow)
+S3method(tune_bayes,default)
+S3method(tune_bayes,formula)
+S3method(tune_bayes,recipe)
+S3method(tune_bayes,workflow)
 S3method(tune_grid,default)
 S3method(tune_grid,formula)
 S3method(tune_grid,recipe)
@@ -56,7 +56,7 @@ export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
 export(conf_bound)
-export(ctrl_Bayes)
+export(ctrl_bayes)
 export(ctrl_grid)
 export(estimate)
 export(exp_improve)
@@ -77,8 +77,8 @@ export(select_best)
 export(show_best)
 export(tunable)
 export(tune)
-export(tune_Bayes)
 export(tune_args)
+export(tune_bayes)
 export(tune_grid)
 export(workflow)
 importFrom(GPfit,GP_fit)
