--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ inst/examples/finefoods.txt
 vignettes/extras/text_analysis_cache
 vignettes/getting_started_cache
 vignettes/extras/svm_classification_cache
+vignettes/articles/Classification_cache/*
