--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.3.1
-pkgdown: 1.4.1
-pkgdown_sha: ~
+pkgdown: 1.4.1.9000
+pkgdown_sha: 7020a7ae5b6db1193de41964cd8f34eeba3aa716
 articles:
   acquisition_functions: acquisition_functions.html
   optimizations: extras/optimizations.html
