--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,8 +55,8 @@ export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
 export(conf_bound)
-export(ctrl_bayes)
-export(ctrl_grid)
+export(control_bayes)
+export(control_grid)
 export(exp_improve)
 export(expo_decay)
 export(finalize_model)
