--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -19,8 +19,8 @@ reference:
     - tune_grid
     - tune_bayes
     - conf_bound
-    - ctrl_bayes
-    - ctrl_grid
+    - control_bayes
+    - control_grid
     - autoplot.tune_results
     - expo_decay
     - workflow
