Add support for simple resampling with no tuning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,10 @@ S3method(predict,exp_improve)
 S3method(predict,prob_improve)
 S3method(print,prob_improve)
 S3method(print,workflow)
+S3method(resample,default)
+S3method(resample,formula)
+S3method(resample,recipe)
+S3method(resample,workflow)
 S3method(tunable,model_spec)
 S3method(tunable,recipe)
 S3method(tunable,step)
@@ -74,6 +78,7 @@ export(no_param)
 export(outcome_names)
 export(parameters)
 export(prob_improve)
+export(resample)
 export(select_best)
 export(show_best)
 export(tunable)
@@ -92,7 +97,7 @@ importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
 importFrom(dials,parameters)
 importFrom(dials,parameters_constr)
-importFrom(dplyr,`%>%`)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
@@ -135,7 +140,7 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
-importFrom(rlang,`:=`)
+importFrom(rlang,":=")
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
 importFrom(rlang,env_get)
