Add `control_resamples()` as an alias for `control_grid()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(collect_predictions)
 export(conf_bound)
 export(control_bayes)
 export(control_grid)
+export(control_resamples)
 export(exp_improve)
 export(expo_decay)
 export(finalize_model)
