--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,7 +92,7 @@ importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
 importFrom(dials,parameters)
 importFrom(dials,parameters_constr)
-importFrom(dplyr,`%>%`)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
@@ -135,7 +135,7 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
-importFrom(rlang,`:=`)
+importFrom(rlang,":=")
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
 importFrom(rlang,env_get)
