Import workflows and remove faux workflows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,6 @@ S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
 S3method(print,prob_improve)
-S3method(print,workflow)
 S3method(tunable,model_spec)
 S3method(tunable,recipe)
 S3method(tunable,step)
@@ -53,9 +52,6 @@ S3method(tune_grid,default)
 S3method(tune_grid,formula)
 S3method(tune_grid,recipe)
 S3method(tune_grid,workflow)
-export(add_formula)
-export(add_model)
-export(add_recipe)
 export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
@@ -88,7 +84,7 @@ export(tune)
 export(tune_args)
 export(tune_bayes)
 export(tune_grid)
-export(workflow)
+import(workflows)
 importFrom(GPfit,GP_fit)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_danger)
