--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     tidyr,
     GPfit,
     foreach,
-    parsnip (>= 0.0.3.9000)
+    parsnip (>= 0.0.3.9000),
+    workflows
 Suggests: 
     testthat,
     knitr,
@@ -39,7 +40,7 @@ Suggests:
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.99.9001
+RoxygenNote: 7.0.0
 Remotes:
     tidymodels/dials,
     tidymodels/recipes,    
