--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     GPfit,
     foreach,
     parsnip (>= 0.0.3.9000),
-    workflows
+    workflows,
+    hardhat
 Suggests: 
     testthat,
     knitr,
@@ -45,4 +46,5 @@ Remotes:
     tidymodels/dials,
     tidymodels/recipes,    
     tidymodels/parsnip,
+    tidymodels/hardhat,
     r-lib/cli
