first pass at last_fit
@apreshill

I think that I might change what gets exposed by the extract function in a separate PR so the results in the `.extract` column might change.  See #127 to follow along.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ S3method(fit_resamples,default)
 S3method(fit_resamples,formula)
 S3method(fit_resamples,recipe)
 S3method(fit_resamples,workflow)
+S3method(last_fit,default)
+S3method(last_fit,formula)
+S3method(last_fit,recipe)
+S3method(last_fit,workflow)
 S3method(load_pkgs,character)
 S3method(load_pkgs,model_spec)
 S3method(load_pkgs,workflow)
@@ -65,6 +69,7 @@ export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
 export(fit_resamples)
+export(last_fit)
 export(load_pkgs)
 export(min_grid)
 export(min_grid.boost_tree)
