update docs and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,12 @@ S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
 S3method(print,prob_improve)
+S3method(tunable,boost_tree)
+S3method(tunable,linear_reg)
+S3method(tunable,logistic_reg)
 S3method(tunable,model_spec)
+S3method(tunable,multinomial_reg)
+S3method(tunable,nearest_neighbor)
 S3method(tunable,recipe)
 S3method(tunable,step)
 S3method(tunable,step_embed)
