return a workflow instead of model and recipe for #127

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,8 @@ export(control_grid)
 export(control_resamples)
 export(exp_improve)
 export(expo_decay)
+export(extract_model)
+export(extract_recipe)
 export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
